# fastapi-chatroom

./: README.md  auth.py  database.py  main.py  models.py  requirements.txt
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
