[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi==0.115.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic==2.8.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy==2.0.31",
    "uvicorn[standard]==0.30.1",
]
